finish swagger documentation
